# langchain-clean-architecture

./: .env.sample  .gitignore  Dockerfile  config.yaml  pyproject.toml
app/: container.py  main.py
app/api/: router.py
app/api/v1/: chat_completions.py  models.py
app/entity/: chat.py  chat_message.py
app/gateway/chat_model/: azure_chat_model.py  openai_chat_model.py
app/interactor/: chat_interactor.py
tests/e2e_tests/: test_chat_competions.py
tests/local_tests/interactor/: test_chat_interactor.py
